// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deselect 1`] = `
"<div class=\\"_Select_1f868f _multiple_1f868f\\"><button style=\\"--bnt-rgb: var(--dodo-rgb-info);\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _active_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button style=\\"--bnt-rgb: var(--dodo-rgb-info);\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _active_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button style=\\"\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select a value 1`] = `
"<div class=\\"_Select_1f868f\\"><button style=\\"--bnt-rgb: var(--dodo-rgb-info);\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _active_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button style=\\"\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button style=\\"\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select multiple 1`] = `
"<div class=\\"_Select_1f868f _multiple_1f868f\\"><button style=\\"--bnt-rgb: var(--dodo-rgb-info);\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _active_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button style=\\"\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button style=\\"\\" type=\\"button\\" class=\\"_Button_374879 _default_374879 _rounded_374879\\">
    <div class=\\"_content_374879\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;
